src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Market Intelligence Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>MS Newsletter %E2%80%93 Engaged</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Remarket%2FNurture</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Media</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Invited</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Newly Assigned</fullName>
        </values>
        <values>
            <fullName>Not Responding</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Remarket%2FNurture</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
        <values>
            <fullName>Working-Uncontacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Previous Lead Owner</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Invited</fullName>
        </values>
        <values>
            <fullName>MS Newsletter %E2%80%93 Engaged</fullName>
        </values>
        <values>
            <fullName>MS Newsletter %E2%80%93 New</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Responding</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Remarket%2FNurture</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
        <values>
            <fullName>Working-Uncontacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Soapbox Events Registrations</fullName>
        <description>This is the lead process for Soapbox Events registrations</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Invited</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>All_US__c</fullName>
        <label>All US NAICS Codes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Area_Code__c</fullName>
        <formula>VALUE(MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone,&quot;(&quot;, &quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),
IF(LEFT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone,&quot;(&quot;, &quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),1)=&quot;1&quot;,2,1),3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assistant_Name__c</fullName>
        <label>Assistant Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_Phone__c</fullName>
        <label>Assistant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Audience_Group_Focus__c</fullName>
        <label>Audience Group Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Building/Interior Design</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Commercial Construction</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Dealers/Distributors</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Exhibitions</fullName>
                </value>
                <value>
                    <fullName>Multifamily Construction</fullName>
                </value>
                <value>
                    <fullName>Pools</fullName>
                </value>
                <value>
                    <fullName>Public Works</fullName>
                </value>
                <value>
                    <fullName>Remodeling</fullName>
                </value>
                <value>
                    <fullName>Replacement Contractors</fullName>
                </value>
                <value>
                    <fullName>Residential Construction</fullName>
                </value>
                <value>
                    <fullName>Residential New Construction</fullName>
                </value>
                <value>
                    <fullName>Residential Remodeling</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booth_Number__c</fullName>
        <description>For Leads from Exhibitors lists</description>
        <label>Booth Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Card_Scan_Date__c</fullName>
        <label>Card Scan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private - Not-for-Profit</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Government Agency</fullName>
                </value>
                <value>
                    <fullName>Win Back Prospect</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Primary__c</fullName>
        <defaultValue>&quot;No Competition&quot;</defaultValue>
        <label>Competitor-Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>360 Analytics</fullName>
                </value>
                <value>
                    <fullName>Belfiore</fullName>
                </value>
                <value>
                    <fullName>Bohlke</fullName>
                </value>
                <value>
                    <fullName>CDS Market Research</fullName>
                </value>
                <value>
                    <fullName>Concord Group</fullName>
                </value>
                <value>
                    <fullName>Core Logic</fullName>
                </value>
                <value>
                    <fullName>Costar</fullName>
                </value>
                <value>
                    <fullName>Gregory Group</fullName>
                </value>
                <value>
                    <fullName>Home Builders Research</fullName>
                </value>
                <value>
                    <fullName>House Canary</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>JBREC (John Burns)</fullName>
                </value>
                <value>
                    <fullName>Land Vision</fullName>
                </value>
                <value>
                    <fullName>Market Graphics</fullName>
                </value>
                <value>
                    <fullName>MarketNsight</fullName>
                </value>
                <value>
                    <fullName>Market Pointe</fullName>
                </value>
                <value>
                    <fullName>Market Track</fullName>
                </value>
                <value>
                    <fullName>McGraw Hill</fullName>
                </value>
                <value>
                    <fullName>Minich Strategies</fullName>
                </value>
                <value>
                    <fullName>MLS</fullName>
                </value>
                <value>
                    <fullName>MORE</fullName>
                </value>
                <value>
                    <fullName>Need Sales Input</fullName>
                </value>
                <value>
                    <fullName>No Competition</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RCLCO</fullName>
                </value>
                <value>
                    <fullName>Real Estate Economics</fullName>
                </value>
                <value>
                    <fullName>RL Brown</fullName>
                </value>
                <value>
                    <fullName>Rose Residential Report</fullName>
                </value>
                <value>
                    <fullName>RSI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Unqualified_Reasons__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Belfiore</fullName>
                </value>
                <value>
                    <fullName>Bohlke</fullName>
                </value>
                <value>
                    <fullName>Concord Group</fullName>
                </value>
                <value>
                    <fullName>Costar</fullName>
                </value>
                <value>
                    <fullName>Gregory Group</fullName>
                </value>
                <value>
                    <fullName>Home Builders Research</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>JBREC</fullName>
                </value>
                <value>
                    <fullName>John Burns</fullName>
                </value>
                <value>
                    <fullName>MarketNsight</fullName>
                </value>
                <value>
                    <fullName>Market Pointe</fullName>
                </value>
                <value>
                    <fullName>McGraw Hill</fullName>
                </value>
                <value>
                    <fullName>MLS</fullName>
                </value>
                <value>
                    <fullName>MORE</fullName>
                </value>
                <value>
                    <fullName>RCLCO</fullName>
                </value>
                <value>
                    <fullName>Real Estate Economics</fullName>
                </value>
                <value>
                    <fullName>RSI</fullName>
                </value>
                <value>
                    <fullName>Smart Numbers</fullName>
                </value>
                <value>
                    <fullName>Zonda / Meyers Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Industry_Code__c</fullName>
        <description>Shadow Field</description>
        <label>Contact Industry Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_Code__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACCT</fullName>
                </value>
                <value>
                    <fullName>ADVR</fullName>
                </value>
                <value>
                    <fullName>APPL</fullName>
                </value>
                <value>
                    <fullName>APPR</fullName>
                </value>
                <value>
                    <fullName>APTM</fullName>
                </value>
                <value>
                    <fullName>APTO</fullName>
                </value>
                <value>
                    <fullName>ARCH</fullName>
                </value>
                <value>
                    <fullName>ASSOC</fullName>
                </value>
                <value>
                    <fullName>ATTY</fullName>
                </value>
                <value>
                    <fullName>BLDR</fullName>
                </value>
                <value>
                    <fullName>BPM</fullName>
                </value>
                <value>
                    <fullName>BROK</fullName>
                </value>
                <value>
                    <fullName>CABI</fullName>
                </value>
                <value>
                    <fullName>CONS</fullName>
                </value>
                <value>
                    <fullName>DEVC</fullName>
                </value>
                <value>
                    <fullName>DEVL</fullName>
                </value>
                <value>
                    <fullName>DIST</fullName>
                </value>
                <value>
                    <fullName>DOOR</fullName>
                </value>
                <value>
                    <fullName>ELEC</fullName>
                </value>
                <value>
                    <fullName>ENGR</fullName>
                </value>
                <value>
                    <fullName>FAUC</fullName>
                </value>
                <value>
                    <fullName>FLOOR</fullName>
                </value>
                <value>
                    <fullName>GOVT</fullName>
                </value>
                <value>
                    <fullName>HVAC</fullName>
                </value>
                <value>
                    <fullName>HW</fullName>
                </value>
                <value>
                    <fullName>INSUL</fullName>
                </value>
                <value>
                    <fullName>INSUR</fullName>
                </value>
                <value>
                    <fullName>INTD</fullName>
                </value>
                <value>
                    <fullName>INVB</fullName>
                </value>
                <value>
                    <fullName>LEND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Industry_Description__c</fullName>
        <formula>TEXT (Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Industry Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Lead_Description__c</fullName>
        <defaultValue>Description</defaultValue>
        <label>Contact Lead Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_from_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>to avoid the required billing address on new accounts</description>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_News_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, then the customer does not want to receive the newsletter updates.</inlineHelpText>
        <label>Corporate News &amp; Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counties__c</fullName>
        <label>Counties</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Barbuda</fullName>
                </value>
                <value>
                    <fullName>Antilles, Netherlands</fullName>
                </value>
                <value>
                    <fullName>Arabia, Saudi</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Key__c</fullName>
        <label>Customer Key</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, then the customer would not like to receive the newsletter updates for Customer Updates.</inlineHelpText>
        <label>Customer Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D_B_Industry__c</fullName>
        <description>Custom field for use with Data.com. Field will be synced with Industry from Data.com to prevent Data.com overwriting the standard Industry field.</description>
        <label>D&amp;B Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_U_N_S_NUmber__c</fullName>
        <label>D-U-N-S NUmber</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description1__c</fullName>
        <label>Lead Description</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Phone__c</fullName>
        <label>Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Divisions__c</fullName>
        <label>Divisions</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplication_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplication Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Commerce_Sales_Rep__c</fullName>
        <description>Housing Intelligence Pro Blog eCommerce sales rep</description>
        <label>E-Commerce Sales Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Angela Bates</fullName>
                </value>
                <value>
                    <fullName>Brooke Burns</fullName>
                </value>
                <value>
                    <fullName>Budd Brumbaugh</fullName>
                </value>
                <value>
                    <fullName>Catherine La Femina</fullName>
                </value>
                <value>
                    <fullName>John Shanks</fullName>
                </value>
                <value>
                    <fullName>Julie James</fullName>
                </value>
                <value>
                    <fullName>Lynda McNally</fullName>
                </value>
                <value>
                    <fullName>Michael Ellison</fullName>
                </value>
                <value>
                    <fullName>-NONE-</fullName>
                </value>
                <value>
                    <fullName>Toby Morrison</fullName>
                </value>
                <value>
                    <fullName>Wayne Norris</fullName>
                </value>
                <value>
                    <fullName>Wendy Pace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Blast_Day__c</fullName>
        <label>Email Blast Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
                <value>
                    <fullName>Four</fullName>
                </value>
                <value>
                    <fullName>Five</fullName>
                </value>
                <value>
                    <fullName>Six</fullName>
                </value>
                <value>
                    <fullName>Seven</fullName>
                </value>
                <value>
                    <fullName>Eight</fullName>
                </value>
                <value>
                    <fullName>Nine</fullName>
                </value>
                <value>
                    <fullName>Ten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AHF LIVE: Housing Developers Forum</fullName>
                </value>
                <value>
                    <fullName>AHF LIVE—Affordable Housing Developers Summit</fullName>
                </value>
                <value>
                    <fullName>ARCHITECT CONNECTIONS</fullName>
                </value>
                <value>
                    <fullName>Architectural Lighting Design Awards</fullName>
                </value>
                <value>
                    <fullName>BUILDER CONNECTIONS</fullName>
                </value>
                <value>
                    <fullName>Conferences</fullName>
                </value>
                <value>
                    <fullName>Co-op Events</fullName>
                </value>
                <value>
                    <fullName>Hanley Awards</fullName>
                </value>
                <value>
                    <fullName>HIVE (Housing Innovation, Vision &amp; Economics)</fullName>
                </value>
                <value>
                    <fullName>HIVE Design</fullName>
                </value>
                <value>
                    <fullName>Housing Leadership Summit</fullName>
                </value>
                <value>
                    <fullName>Infrastructure Imperative</fullName>
                </value>
                <value>
                    <fullName>Lifestyle Events</fullName>
                </value>
                <value>
                    <fullName>MFE CONNECTIONS</fullName>
                </value>
                <value>
                    <fullName>Multifamily Executive Conference</fullName>
                </value>
                <value>
                    <fullName>Multifamily Executive Leadership Summit</fullName>
                </value>
                <value>
                    <fullName>P/A Awards</fullName>
                </value>
                <value>
                    <fullName>ProSales 100 Conference</fullName>
                </value>
                <value>
                    <fullName>PROSALES CONNECTIONS</fullName>
                </value>
                <value>
                    <fullName>Roadshows</fullName>
                </value>
                <value>
                    <fullName>Roundtables</fullName>
                </value>
                <value>
                    <fullName>The Remodelers Summit</fullName>
                </value>
                <value>
                    <fullName>Want to know more about the programs we offer? Get in touch!</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Falcon_Contact_ID__c</fullName>
        <label>Falcon Contact ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Former_Customer_Type__c</fullName>
        <label>Former Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HW Cancellation</fullName>
                </value>
                <value>
                    <fullName>MS Cancellation</fullName>
                </value>
                <value>
                    <fullName>Both HW &amp; MS Cancellation</fullName>
                </value>
                <value>
                    <fullName>Trial Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDPR_Opt_In_Date__c</fullName>
        <label>GDPR Opt-In Date</label>
        <type>Date</type>
    </fields>
</CustomObject>